Fixed service-box overflow in mobile's viewport

--- a/css/style.css
+++ b/css/style.css
@@ -399,7 +399,7 @@ section {
     justify-content: center;
     align-items: center;
     background-color: var(--main-color);
-    height: 600px;
+    height: 650px;
     border-radius: 3rem;
     cursor: pointer;
     border: 5px solid transparent;
@@ -642,5 +642,9 @@ section {
 
     .timeline-dot {
         left: 0;
+    }
+
+    .service-box {
+        height: fit-content;
     }
 }
